# AgentPay-Solana

./: .env.example  .gitignore  PROJECT_STRUCTURE.md  README.md  biome.json  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
backend/: .env.example  README.md  drizzle.config.ts  package.json  tsconfig.json
backend/src/: index.ts
backend/src/db/: migrate.ts  schema.ts
backend/src/lib/: agentpay.ts  config.ts  redis.ts
backend/src/middleware/: errorHandler.ts  rateLimit.ts
backend/src/routes/: agents.ts  invoices.ts  payments.ts  splits.ts
backend/src/services/: AgentService.ts  PaymentService.ts  SplitService.ts
contracts/: .gitignore  Anchor.toml  Cargo.toml  package.json
contracts/migrations/: deploy.ts
contracts/programs/agent_registry/: Cargo.toml
contracts/programs/payment_router/: Cargo.toml
contracts/programs/payment_router/src/: lib.rs
contracts/programs/split_vault/: Cargo.toml
contracts/tests/: agent_registry.test.ts
demo/: .env.example  package.json  tsconfig.json
demo/src/: index.ts
docs/: PITCH_DECK.md  README.md
frontend/: .env.example  README.md  next.config.mjs  package.json  tailwind.config.ts  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: providers.tsx
frontend/hooks/: useActivityFeed.ts  useAgents.ts  useEscrows.ts  useInvoices.ts  usePayments.ts  useRecentPayments.ts  useSplits.ts  useStats.ts
frontend/lib/: api.ts  solana.ts  units.ts
sdk/: package.json  tsconfig.json  tsup.config.ts
sdk/src/: client.ts  index.ts
sdk/src/idl/: index.ts  (+3 more)
(+63 files in other folders)
