[package]
name = "payment_router"
version = "0.1.0"
description = "AgentPay direct payments and escrow"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "payment_router"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
